# I2CPP

./: CMakeLists.txt  README.md
include/: i2cpp.h
src/: i2cpp.cpp
